--- a/Hats/src/Vista/FrmPrincipal.form
+++ b/Hats/src/Vista/FrmPrincipal.form
@@ -74,7 +74,7 @@
       <SubComponents>
         <Component class="javax.swing.JButton" name="btnUsuarios">
           <Properties>
-            <Property name="text" type="java.lang.String" value="btnUsuarios"/>
+            <Property name="text" type="java.lang.String" value="Usuarios"/>
             <Property name="actionCommand" type="java.lang.String" value="Usuarios"/>
           </Properties>
           <AuxValues>
