Agregue crud usuarios

--- a/Hats/src/Vista/FrmPrincipal.form
+++ b/Hats/src/Vista/FrmPrincipal.form
@@ -27,6 +27,7 @@
               <Component id="jpMenu" min="-2" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
               <Component id="jpContenedor" min="-2" max="-2" attributes="0"/>
+              <EmptySpace pref="636" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
